@@ -1,6 +1,8 @@
 2020-02-15 Marek M. Cel <marekcel@marekcel.pl>
 
     * stabilizer type as constant
+    
+    * blade element method
 
 
 
